# Haskell

./: README.md  index.html
SimpleSignalExample-0.1.0.0/: SimpleSignalExample.cabal
SimpleSignalExample-0.1.0.0/src/: Main.hs
my-shapes/: README.md  my-shapes.cabal
my-shapes/.stack-work/install/x86_64-linux/lts-9.11/8.0.2/flag-cache/: my-shapes-0.1.0.0-1u8ZCrX5ylSDv8e59Ost1k
my-shapes/.stack-work/install/x86_64-linux/lts-9.11/8.0.2/lib/x86_64-linux-ghc-8.0.2/my-shapes-0.1.0.0-1u8ZCrX5ylSDv8e59Ost1k/: Lib.dyn_hi  Lib.hi
my-shapes/.stack-work/install/x86_64-linux/lts-9.11/8.0.2/pkgdb/: my-shapes-0.1.0.0-1u8ZCrX5ylSDv8e59Ost1k.conf  package.cache
my-shapes/app/: Example.hs  Main.hs  Render.hs  ShapeInterpreter.hs  Signal.hs
scotty-example-0.1.0.0/: scotty-example.cabal
scotty-example-0.1.0.0/app/: Main.hs
scotty-test/: Colors.hs  LICENSE  Main.hs  Shapes.hs  SvgHandler.hs  Transformations.hs  VisualHandler.hs  input.html  scotty-test.cabal
