name:                scotty-example
version:             0.1.0.0
synopsis:            Small example of using the Scotty framework
description:         Scotty example for CS4012
homepage:            https://github.com/githubuser/scotty-example1#readme
license:             BSD3
license-file:        LICENSE
author:              Glenn Strong
maintainer:          Glenn.Strong@scss.tcd.ie
copyright:           Glenn Strong
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable scotty-example1
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.5 && < 4.7
                     , blaze-html
                     , scotty
                     , text

  default-language:    Haskell2010

